# TTK4260-2026

./: .gitignore  README.md  pyproject.toml  uv-setup.ps1
AssignmentPart1/: Exploration.ipynb  TTK4260_FlowClassification_Assignment.ipynb  TTK4260_SteelPlates_Solution.ipynb
AssignmentPart1/2phasedata/: data.csv
AutoEncoder/: AEvsVAE.ipynb  AutoEncoder.ipynb  TTK4260_Assignment_RPCA_AE_VAE.docx
Clustering/: Clustering_Interactive_Notebook.ipynb  ImageSegmentation.ipynb  K-means Image Compression.ipynb
CompressedSensing/: CSExplanation.ipynb  CSExplanationRealistic.ipynb  NSvsCS.ipynb  OSP-Explanation.ipynb
FeatureEngineeringSelection/Notebook/: Feature_Engineering_Selection.ipynb  Feature_Engineering_Selection_clean.ipynb  FilterMethod.ipynb
IndependentComponentAnalysis/Notebook/: FastICA-ImageSeparation.ipynb  ICA-Prerequisite.ipynb  ICA_Audio.ipynb  ICA_Comprehensive_Interactive.ipynb  ICA_Geometric.ipynb  PulseDetectionFromVideo.ipynb
LeastSquares/Notebooks/: LSAssignmentSolution.ipynb  LSInteractiveLecture.ipynb
LogisticRegression/: LogisticRegression.tex
LogisticRegression/Notebook/: LogisticRegression_Application.ipynb  (+1 more)
NeuralNetwork/: CNN-MNIST.ipynb  Convolution_Filters.ipynb  LR-MNIST.ipynb
OSP/: OSP-Explanation.ipynb  RPCA_OSP_cylinder.ipynb
StreamlitApp/: DISCREPANCIES.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS_COMPLETED.md  LECTURE_COVERAGE_COMPLETE.md  LECTURE_TOPICS_ANALYSIS.txt  PCA_APPLICATION_ENHANCED.md  PCA_ENHANCEMENTS.md  PCR_APPLICATION_IMPLEMENTATION.md  QUICKSTART_PCR.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  start_with_uv.bat  start_with_uv.sh
StreamlitApp/pages/: 01_PCR_Interactive.py  02_PCA_Explorer.py  03_MLR_Regularization.py  04_Least_Squares.py  05_Maximum_Likelihood.py  06_Performance_Metrics.py  07_PCR_Application.py  08_PCA_Application.py  09_ICA_Pulse_Detection.py  10_PLSR_Application.py  11_MLR_PCR_PLSR_Comparison.py  12_ICA_Prerequisite.py  13_ICA_ByHand.py  14_ICA_Geometric.py  15_ICA_Applications.py  16_tSNE_Explorer.py
StreamlitApp/utils/: __init__.py  data_generator.py  metrics.py  models.py  visualizations.py
StudentsSolutions/: Assignment_1_OleMarcus_Aarnes.ipynb
Trees/: Trees.ipynb
(+34 files in other folders)
