[project]
name = "ttk4260-2026"
version = "1.0.0"
description = "TTK4260 - Multivariate Statistical Analysis and Machine Learning Course Materials"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TTK4260 Course Team"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "opencv-python>=4.8.0",
    "imageio>=2.31.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipykernel>=6.25.0",
    "plotly>=5.14.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
streamlit = [
    "streamlit>=1.28.0",
    "openpyxl>=3.1.0",
    "pypdf>=3.17.0",
]

dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []  # This is a notebooks repository, not a package

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
]
