[project]
name = "ttk4260-streamlit-app"
version = "1.0.0"
description = "Interactive Streamlit applications for TTK4260 - Multivariate Statistical Analysis and Machine Learning"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "TTK4260 Course Team"}
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "plotly>=5.14.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
    "pypdf>=3.17.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
# This is a Streamlit app, not a distributable package.
# Tell hatchling not to look for a package directory.
[tool.hatch.build.targets.wheel]
packages = ["pages", "utils"]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
